--- a/AueraomingSoon/index.html
+++ b/AueraomingSoon/index.html
@@ -168,7 +168,7 @@
             <div class="col-md-5">
               <div class="credit wow fadeInRight" data-wow-delay=".4s">
                 <p>
-                  <a rel="nofollow" href="/contact.html">Join our VIP waiting list!</a>
+                  <a rel="nofollow" href="contact.html">Join our VIP waiting list!</a>
                 </p>
               </div>
             </div>
