--- a/AueraomingSoon/index.html
+++ b/AueraomingSoon/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="col-md-8">
               <div class="header-right text-right">
-                <a href="contact.html">Join our VIP list! <u>business@auera.in</u></a>
+                <a href="https://forms.gle/uyrkSrpqU8AfDfyu7">Join our VIP list! <u>business@auera.in</u></a>
               </div>
             </div>
           </div>
@@ -168,7 +168,7 @@
             <div class="col-md-5">
               <div class="credit wow fadeInRight" data-wow-delay=".4s">
                 <p>
-                  <a rel="nofollow" href="contact.html">Join our VIP waiting list!</a>
+                  <a rel="nofollow" href="https://forms.gle/uyrkSrpqU8AfDfyu7l">Join our VIP waiting list!</a>
                 </p>
               </div>
             </div>
