--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="col-md-8">
               <div class="header-right text-right">
-                <a href="https://forms.gle/uyrkSrpqU8AfDfyu7">Join our VIP list! <u>business@auera.in</u></a>
+                
               </div>
             </div>
           </div>
@@ -61,7 +61,7 @@
                 <div class="heading">
                   <h1 class="text-white wow fadeInUp" data-wow-delay=".2s">
                     We Are <br />
-                    Coming Soon
+                    Launching Soon
                   </h1>
                 </div>
                 <!-- heading end  -->
@@ -78,7 +78,7 @@
               <div class="col-xl-5 col-lg-5">
                 <!-- desc strat  -->
                 <p class="wow fadeInLeft" data-wow-delay=".4s">
-                  Our dynamic collections embody the spirit of streetwear, ensuring youu are always one step ahead of the fashion curve. Designed for you, to make every sidewalk your runway. Moreover, we are dedicated to serving rural India, connecting with local artists, talents, and trendsetters to promote and celebrate their unique styles and creativity. At our core, we're committed to supporting and nurturing the rich cultural diversity of India.
+                  Our dynamic collections embody the spirit of streetwear, Ensuring you are always one step ahead of the fashion curve. Designed for you to make every sidewalk your runway. Moreover, we are dedicated to serving rural India, connecting with local artists, talents, and trendsetters to promote and celebrate their unique styles and creativity. At our core, we're committed to supporting and nurturing the rich cultural diversity of India.
                 </p>
                 <!-- desc end  -->
               </div>
@@ -94,7 +94,7 @@
                 <!-- section-title start  -->
                 <div class="section-title">
                   <h1 class="wow fadeInUp" data-wow-delay=".2s">
-                    "Our Style Makers
+                    
                   </h1>
                   <h2 class="wow fadeInUp" data-wow-delay=".4s">
                     Every month, a collection
@@ -120,16 +120,16 @@
                   <img src="assets/img/img-3.png" alt="" />
                   <ul class="social-links">
                     <li>
-                      <a href="#"><i class="lni lni-facebook-filled"></i></a>
+                      <a href="https://www.facebook.com/profile.php?id=61551549606864"><i class="lni lni-facebook-filled"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="lni lni-twitter-filled"></i></a>
+                      <a href="twitter.com/AueraOfficial"><i class="lni lni-twitter-filled"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="lni lni-instagram-original"></i></a>
+                      <a href="instagram.com/aueraofficial"><i class="lni lni-instagram-original"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="lni lni-linkedin"></i></a>
+                      <a href="https://www.snapchat.com/add/aueraofficial?share_id=QyDnsNpliAk&locale=en-GB"><i class="lni lni-snapchat"></i></a>
                     </li>
                   </ul>
                 </div>
@@ -168,7 +168,7 @@
             <div class="col-md-5">
               <div class="credit wow fadeInRight" data-wow-delay=".4s">
                 <p>
-                  <a rel="nofollow" href="contact.html">Be part of our brand's journey from the beginning! Sign up with your email to receive exclusive updates and early access to our launch.</a>
+                  <a rel="nofollow" href="https://forms.gle/2vKsqXKxURbcnzi3A">Be part of our brand's journey from the beginning! Sign up with your email to receive exclusive updates and early access to our launch.</a>
                 </p>
               </div>
             </div>
