--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
                       <a href="https://www.facebook.com/profile.php?id=61551549606864"><i class="lni lni-facebook-filled"></i></a>
                     </li>
                     <li>
-                      <a href="twitter.com/AueraOfficial"><i class="lni lni-twitter-filled"></i></a>
+                      <a href="https://twitter.com/AueraOfficial?t=x9inEFuXFBEvdHx6xSfF4Q&s=09"><i class="lni lni-twitter-filled"></i></a>
                     </li>
                     <li>
-                      <a href="instagram.com/aueraofficial"><i class="lni lni-instagram-original"></i></a>
+                      <a href="https://instagram.com/aueraofficial?igshid=MzRlODBiNWFlZA=="><i class="lni lni-instagram-original"></i></a>
                     </li>
                     <li>
                       <a href="https://www.snapchat.com/add/aueraofficial?share_id=QyDnsNpliAk&locale=en-GB"><i class="lni lni-snapchat"></i></a>
