--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Auera | Coming Soon</title>
+    <title>Auera | Under Maintenance</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -61,7 +61,7 @@
                 <div class="heading">
                   <h1 class="text-white wow fadeInUp" data-wow-delay=".2s">
                     We Are <br />
-                    Launching Soon
+                    Under Maintenance
                   </h1>
                 </div>
                 <!-- heading end  -->
@@ -71,7 +71,7 @@
                 <div
                   class="wow fadeInRight"
                   data-wow-delay=".4s"
-                  data-countdown="2023/09/28"
+                  data-countdown="2023/10/11"
                 ></div>
                 <!-- countdown end  -->
               </div>
